--- a/spring-test/spring-test.gradle
+++ b/spring-test/spring-test.gradle
@@ -9,16 +9,16 @@ dependencyManagement {
 
 dependencies {
 	compile(project(":spring-core"))
+	compile(project(":spring-web"))
+	compile(project(":spring-webflux"))
+	compile(project(":spring-webmvc"))
+	compile(project(":spring-websocket"))
 	optional(project(":spring-aop"))
 	optional(project(":spring-beans"))
 	optional(project(":spring-context"))
 	optional(project(":spring-jdbc"))
 	optional(project(":spring-orm"))
 	optional(project(":spring-tx"))
-	optional(project(":spring-web"))
-	optional(project(":spring-webflux"))
-	optional(project(":spring-webmvc"))
-	optional(project(":spring-websocket"))
 	optional("javax.activation:activation:1.1.1")
 	optional("javax.el:javax.el-api:3.0.1-b04")
 	optional("javax.inject:javax.inject:1")
