--- a/spring-test/spring-test.gradle
+++ b/spring-test/spring-test.gradle
@@ -10,9 +10,9 @@ dependencyManagement {
 dependencies {
 	compile(project(":spring-core"))
 	compile(project(":spring-web"))
-	compile(project(":spring-webflux"))
 	compile(project(":spring-webmvc"))
 	compile(project(":spring-websocket"))
+	optional(project(":spring-webflux"))
 	optional(project(":spring-aop"))
 	optional(project(":spring-beans"))
 	optional(project(":spring-context"))
